tests/errmsgs/t18983.nim
discard """
  errormsg: "illegal recursion in type 'A'"
"""

type
  A* = A
  B = (A,)
